--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
   ],
   "build": {
     "env": {
+      "CI": "false",
       "REACT_APP_SUPABASE_URL": "https://irergynffqnkertdagbs.supabase.co"
     }
   }
